--- a/src/css/snappy-dash.css
+++ b/src/css/snappy-dash.css
@@ -1,2 +1,5 @@
 @import 'base.css';
 @import 'layout.css';
+@import 'modules.css';
+@import 'modules/filter-panel.css';
+@import 'modules/navigation-tile.css';
