--- a/src/css/snappy-dash.css
+++ b/src/css/snappy-dash.css
@@ -3,3 +3,4 @@
 @import 'modules.css';
 @import 'modules/filter-panel.css';
 @import 'modules/navigation-tile.css';
+@import 'modules/activity-list.css';
