--- a/src/css/modules/navigation-tile.css
+++ b/src/css/modules/navigation-tile.css
@@ -1,16 +1,24 @@
 .nav-tile {
-  height: 100px;
   text-align: center;
   color: #eee;
 
   > a {
+    display: block;
+    height: 100px;
+    border-left: 8px solid var(--color-green-1);
     text-decoration: none;
     color: inherit;
   }
 
-  > a:hover * {
+  > a:hover {
     background-color: var(--color-green-3);
+    border-color: var(--color-green-3);
     color: #fff;
+  }
+
+  &.nav-tile__active > a {
+    background-color: var(--color-green-3);
+    border-color: var(--color-green-4);
   }
 }
 
