--- a/src/css/modules/filter-panel.css
+++ b/src/css/modules/filter-panel.css
@@ -9,11 +9,11 @@
 }
 
 .filter-panel__group {
-  padding: 2em;
+  padding: .5em;
   border-bottom: 1px solid var(--color-green-3);
 
   legend {
-    padding-left: 1em;
+    padding-left: .5em;
     font-weight: 500;
   }
 }
