--- a/src/js/components/applications/applications.html
+++ b/src/js/components/applications/applications.html
@@ -1,1 +1,111 @@
-<h2>Applications</h2>
+<div class="application-list">
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Spring Boot App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Node App</h2>
+    </a>
+  </div>
+  <div class="application-tile">
+    <a href="#">
+      <div class="nav-tile__icon typcn typcn-th-small"></div>
+      <h2 class="nav-tile__label">Grails App</h2>
+    </a>
+  </div>
+
+</div>
