--- a/src/css/modules/navigation-tile.css
+++ b/src/css/modules/navigation-tile.css
@@ -3,14 +3,15 @@
   color: #eee;
 
   > a {
+    background-color: var(--color-green-1);
+    border-left: 8px solid var(--color-green-1);
+    color: inherit;
     display: block;
     height: 100px;
-    padding: .5em;
+    padding: 0.5em;
     padding-right: 1em;
-    border-left: 8px solid var(--color-green-1);
     text-decoration: none;
-    color: inherit;
-    background-color: var(--color-green-1);
+
     transition: background-color 300ms, border-color 300ms;
   }
 
