--- a/src/css/modules/activity-list.css
+++ b/src/css/modules/activity-list.css
@@ -3,24 +3,24 @@
 }
 
 .activity-list-item {
-  display: flex;
-  flex-direction: row;
   align-items: center;
   background-color: var(--color-blue-1);
+  display: flex;
+  flex-direction: row;
   margin-bottom: 1px;
 }
 
 .activity-list-item__icon {
+  background-color: var(--color-blue-3);
+  border-radius: 50%;
+  color: #fff;
+  font-size: 1.5em;
   height: 1em;
-  width: 1.1em;
-  margin: .5em;
+  margin: 0.5em;
   padding: 5px;
   padding-bottom: 7px;
-  font-size: 1.5em;
-  background-color: var(--color-blue-3);
-  color: #ffffff;
-  border-radius: 1.75em;
   text-align: center;
+  width: 1.1em;
 }
 
 .activity-list-item__description {
